@@ -8,6 +8,7 @@ import com.planbana.backend.audit.AuditLogger;
 import com.planbana.backend.chat.ChatRoomService;
 import com.planbana.backend.user.User;
 import com.planbana.backend.user.UserRepository;
+
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.data.domain.PageRequest;
@@ -34,10 +35,9 @@ public class EventController {
   private final UserRepository users;
   private final ChatRoomService chatService;
   private final AuditLogger auditLogger;
-  private final AuditLogRepository auditLogRepo; // for read endpoint
+  private final AuditLogRepository auditLogRepo;
 
   private static final Logger logger = LoggerFactory.getLogger(EventController.class);
-  private static final ZoneId DEFAULT_ZONE = ZoneId.of("Asia/Kolkata");
 
   public EventController(
       EventRepository repo,
@@ -54,7 +54,9 @@ public class EventController {
     this.auditLogRepo = auditLogRepo;
   }
 
-  // ================= DTOs =================
+  // ============================================================
+  // DTOs
+  // ============================================================
 
   public static class CreateEvent {
     public String title, description, imageUrl, category, pricingType, price, requirements, additionalGuidelines;
@@ -72,11 +74,14 @@ public class EventController {
     }
   }
 
-  // ================= Endpoints =================
+  // ============================================================
+  // Create Event
+  // ============================================================
 
   @PostMapping
   public Event create(@RequestBody CreateEvent req, Authentication auth) {
     User u = getCurrentUser(auth);
+
     Event e = new Event();
     e.setTitle(req.title);
     e.setDescription(req.description);
@@ -101,29 +106,28 @@ public class EventController {
     e.setRequirements(req.requirements);
     e.setAdditionalGuidelines(req.additionalGuidelines);
 
-    // ✅ Automatically add creator as APPROVED participant
+    // Host auto-add
     e.getParticipants().add(u.getId());
 
     repo.save(e);
 
-    // ✅ Auto-create chatroom for this event
+    // Create chatroom
     chatService.createIfNotExists(e.getId(), e.getTitle(), u.getId(), e.getImageUrl());
 
-    // 🔐 Audit: event + user activity
-    Map<String, Object> meta = new HashMap<>();
-    meta.put("title", e.getTitle());
-    meta.put("category", e.getCategory());
-    meta.put("startAt", e.getStartAt());
-    meta.put("pricingType", e.getPricingType());
-
+    // AUDIT: EVENT_CREATED
     auditLogger.log(
         AuditCategory.EVENT_LIFECYCLE,
         AuditAction.EVENT_CREATED,
         u.getId(),
         null,
         e.getId(),
-        meta);
+        Map.of(
+            "title", e.getTitle(),
+            "category", e.getCategory(),
+            "startAt", e.getStartAt(),
+            "pricingType", e.getPricingType()));
 
+    // AUDIT: USER_CREATED_EVENT
     auditLogger.log(
         AuditCategory.USER_ACTIVITY,
         AuditAction.USER_CREATED_EVENT,
@@ -134,6 +138,10 @@ public class EventController {
 
     return e;
   }
+
+  // ============================================================
+  // List Events (search + filters)
+  // ============================================================
 
   @GetMapping
   public List<Event> list(
@@ -147,6 +155,7 @@ public class EventController {
       @RequestParam(defaultValue = "20") int size,
       @RequestParam(required = false) String category,
       @RequestParam(required = false) Boolean showCanceled) {
+
     Query query = new Query();
 
     if (q != null && !q.isBlank()) {
@@ -164,18 +173,18 @@ public class EventController {
       Criteria nearLegacy = Criteria.where("location")
           .nearSphere(new Point(lng, lat))
           .maxDistance(radiusKm / 6378.1);
+
       Criteria nearStart = Criteria.where("startLocation")
           .nearSphere(new Point(lng, lat))
           .maxDistance(radiusKm / 6378.1);
+
       query.addCriteria(new Criteria().orOperator(nearLegacy, nearStart));
     }
 
-    if (startDate != null) {
+    if (startDate != null)
       query.addCriteria(Criteria.where("startAt").gte(startDate));
-    }
-    if (endDate != null) {
+    if (endDate != null)
       query.addCriteria(Criteria.where("endAt").lte(endDate));
-    }
 
     if (!Boolean.TRUE.equals(showCanceled)) {
       query.addCriteria(Criteria.where("isCanceled").ne(true));
@@ -185,18 +194,28 @@ public class EventController {
     return mongo.find(query, Event.class);
   }
 
+  // ============================================================
+  // Get Single Event
+  // ============================================================
+
   @GetMapping("/{id}")
   public Map<String, Object> get(@PathVariable String id, Authentication auth) {
     Event e = repo.findById(id)
         .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Event not found"));
+
     boolean editable = false;
     if (auth != null) {
       String currentUserId = users.findByPhone(auth.getName()).map(User::getId).orElse(null);
       editable = e.getCreatedByUserId().equals(currentUserId)
           || e.getCoHostUserIds().contains(currentUserId);
     }
+
     return Map.of("event", e, "editableByMe", editable);
   }
+
+  // ============================================================
+  // Get My Events
+  // ============================================================
 
   @GetMapping("/my")
   public List<Event> getMyEvents(Authentication auth) {
@@ -204,12 +223,19 @@ public class EventController {
     return repo.findByCreatedByUserId(currentUser.getId());
   }
 
+  // ============================================================
+  // Update Event (Host only)
+  // ============================================================
+
   @PatchMapping("/{id}")
-  public Map<String, String> update(@PathVariable String id,
+  public Map<String, String> update(
+      @PathVariable String id,
       @RequestBody Map<String, Object> body,
       Authentication auth) {
+
     Event e = repo.findById(id)
         .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Event not found"));
+
     User currentUser = getCurrentUser(auth);
     assertOwner(auth, e);
 
@@ -218,55 +244,54 @@ public class EventController {
 
     if (body.containsKey("title")) {
       e.setTitle((String) body.get("title"));
-      updated = true;
       changedFields.add("title");
+      updated = true;
     }
     if (body.containsKey("description")) {
       e.setDescription((String) body.get("description"));
-      updated = true;
       changedFields.add("description");
+      updated = true;
     }
     if (body.containsKey("imageUrl")) {
       e.setImageUrl((String) body.get("imageUrl"));
-      updated = true;
       changedFields.add("imageUrl");
+      updated = true;
     }
     if (body.containsKey("category")) {
       e.setCategory((String) body.get("category"));
-      updated = true;
       changedFields.add("category");
+      updated = true;
     }
     if (body.containsKey("pricingType")) {
       e.setPricingType((String) body.get("pricingType"));
-      updated = true;
       changedFields.add("pricingType");
+      updated = true;
     }
     if (body.containsKey("price")) {
       e.setPrice((String) body.get("price"));
-      updated = true;
       changedFields.add("price");
+      updated = true;
     }
     if (body.containsKey("maxParticipants")) {
       e.setMaxParticipants(Integer.parseInt(body.get("maxParticipants").toString()));
-      updated = true;
       changedFields.add("maxParticipants");
+      updated = true;
     }
     if (body.containsKey("requirements")) {
       e.setRequirements((String) body.get("requirements"));
-      updated = true;
       changedFields.add("requirements");
+      updated = true;
     }
     if (body.containsKey("additionalGuidelines")) {
       e.setAdditionalGuidelines((String) body.get("additionalGuidelines"));
-      updated = true;
       changedFields.add("additionalGuidelines");
+      updated = true;
     }
 
     repo.save(e);
 
     if (updated) {
-      Map<String, Object> meta = new HashMap<>();
-      meta.put("changedFields", changedFields);
+      Map<String, Object> meta = Map.of("changedFields", changedFields);
 
       auditLogger.log(
           AuditCategory.EVENT_LIFECYCLE,
@@ -288,6 +313,10 @@ public class EventController {
     return Map.of("message", "updated");
   }
 
+  // ============================================================
+  // Delete Event (Host only)
+  // ============================================================
+
   @DeleteMapping("/{id}")
   public Map<String, String> delete(@PathVariable String id, Authentication auth) {
     Event e = repo.findById(id)
@@ -296,15 +325,10 @@ public class EventController {
     User currentUser = getCurrentUser(auth);
 
     if (!e.isHost(currentUser.getId())) {
-      logger.warn("Unauthorized delete attempt by user {} on event {}", currentUser.getId(), id);
-
       auditLogger.security(
           AuditAction.UNAUTHORIZED_ACCESS_ATTEMPT,
           currentUser.getId(),
-          Map.of(
-              "endpoint", "DELETE /api/events/" + id,
-              "reason", "non_host_delete_attempt"));
-
+          Map.of("endpoint", "DELETE /api/events/" + id));
       throw new ResponseStatusException(HttpStatus.FORBIDDEN, "Only the event host can delete this event");
     }
 
@@ -329,7 +353,11 @@ public class EventController {
     return Map.of("message", "deleted");
   }
 
-  @PatchMapping("/{id}/status") // Cancel or Restore Event API
+  // ============================================================
+  // Cancel / Restore (Host only)
+  // ============================================================
+
+  @PatchMapping("/{id}/status")
   public Map<String, String> updateEventStatus(
       @PathVariable String id,
       @RequestParam String action,
@@ -341,23 +369,21 @@ public class EventController {
     User currentUser = getCurrentUser(auth);
 
     if (!event.isHost(currentUser.getId())) {
-      logger.warn("Unauthorized status update by user {} on event {}", currentUser.getId(), id);
       auditLogger.security(
           AuditAction.UNAUTHORIZED_ACCESS_ATTEMPT,
           currentUser.getId(),
-          Map.of(
-              "endpoint", "PATCH /api/events/" + id + "/status",
-              "reason", "non_host_status_change"));
+          Map.of("endpoint", "PATCH /api/events/" + id + "/status"));
       throw new ResponseStatusException(HttpStatus.FORBIDDEN, "Only the host can modify event status");
     }
 
-    String act = action.toLowerCase(Locale.ROOT);
-    switch (act) {
+    switch (action.toLowerCase(Locale.ROOT)) {
       case "cancel" -> {
-        if (event.isCanceled()) {
-          return Map.of("message", "Event is already canceled");
-        }
+        if (event.isCanceled())
+          return Map.of("message", "Event already canceled");
+
         event.setCanceled(true);
+        repo.save(event);
+
         auditLogger.log(
             AuditCategory.EVENT_LIFECYCLE,
             AuditAction.EVENT_CANCELED,
@@ -367,10 +393,12 @@ public class EventController {
             Map.of("action", "cancel"));
       }
       case "restore" -> {
-        if (!event.isCanceled()) {
+        if (!event.isCanceled())
           return Map.of("message", "Event is not canceled");
-        }
+
         event.setCanceled(false);
+        repo.save(event);
+
         auditLogger.log(
             AuditCategory.EVENT_LIFECYCLE,
             AuditAction.EVENT_RESTORED,
@@ -379,13 +407,15 @@ public class EventController {
             event.getId(),
             Map.of("action", "restore"));
       }
-      default -> throw new ResponseStatusException(HttpStatus.BAD_REQUEST,
-          "Invalid action. Use 'cancel' or 'restore'");
+      default -> throw new ResponseStatusException(HttpStatus.BAD_REQUEST, "Invalid action");
     }
 
-    repo.save(event);
-    return Map.of("message", "Event status updated to " + action);
+    return Map.of("message", "Event status updated");
   }
+
+  // ============================================================
+  // Join Event
+  // ============================================================
 
   @PostMapping("/{id}/join")
   public JoinStatusResponse requestJoin(@PathVariable String id, Authentication auth) {
@@ -393,9 +423,9 @@ public class EventController {
     Event e = repo.findById(id)
         .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Event not found"));
 
-    // Host auto-approve
+    // Host auto approve
     if (Objects.equals(e.getCreatedByUserId(), u.getId())) {
-      ensureParticipant(e, u.getId());
+      ensureApproved(e, u.getId());
       repo.save(e);
       chatService.addParticipantIfExists(e.getId(), u.getId());
 
@@ -405,7 +435,7 @@ public class EventController {
           u.getId(),
           null,
           e.getId(),
-          Map.of("reason", "host_self_join"));
+          Map.of("hostSelfJoin", true));
 
       return new JoinStatusResponse(Event.JoinStatus.APPROVED.name());
     }
@@ -425,13 +455,14 @@ public class EventController {
       return new JoinStatusResponse(Event.JoinStatus.APPROVED.name());
     }
 
-    Event.JoinRequest existing = findJoinRequestForUser(e, u.getId());
+    // Check existing request
+    Event.JoinRequest existing = findJoinRequest(e, u.getId());
     if (existing != null) {
-      // Already requested; don't spam logs every time
       return new JoinStatusResponse(existing.getJoinStatus().name());
     }
 
-    boolean hasCapacity = e.getMaxParticipants() == null || e.getParticipants().size() < e.getMaxParticipants();
+    boolean hasCapacity = e.getMaxParticipants() == null ||
+        e.getParticipants().size() < e.getMaxParticipants();
 
     if (hasCapacity) {
       Event.JoinRequest jr = new Event.JoinRequest(u.getId(), Event.JoinStatus.PENDING, Instant.now());
@@ -459,9 +490,13 @@ public class EventController {
           e.getId(),
           Map.of("reason", "capacity_reached"));
 
-      return new JoinStatusResponse("Participant limit reached");
+      return new JoinStatusResponse("WAITLISTED");
     }
   }
+
+  // ============================================================
+  // Leave Event
+  // ============================================================
 
   @DeleteMapping("/{id}/leave")
   public Map<String, String> leaveEvent(@PathVariable String id, Authentication auth) {
@@ -469,30 +504,26 @@ public class EventController {
     Event event = repo.findById(id)
         .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Event not found"));
 
-    boolean modified = false;
+    boolean changed = false;
 
-    if (event.getParticipants().remove(user.getId())) {
-      modified = true;
-    }
-    if (event.getCoHostUserIds().remove(user.getId())) {
-      modified = true;
-    }
+    if (event.getParticipants().remove(user.getId()))
+      changed = true;
+    if (event.getCoHostUserIds().remove(user.getId()))
+      changed = true;
 
-    List<Event.JoinRequest> updatedRequests = event.getJoinRequests()
-        .stream()
-        .filter(jr -> !jr.getUserId().equals(user.getId()))
+    List<Event.JoinRequest> updated = event.getJoinRequests().stream()
+        .filter(j -> !j.getUserId().equals(user.getId()))
         .toList();
-    if (updatedRequests.size() != event.getJoinRequests().size()) {
-      event.setJoinRequests(updatedRequests);
-      modified = true;
+
+    if (updated.size() != event.getJoinRequests().size()) {
+      event.setJoinRequests(updated);
+      changed = true;
     }
 
-    if (event.getParticipantsWaitingList() != null &&
-        event.getParticipantsWaitingList().remove(user.getId())) {
-      modified = true;
-    }
+    if (event.getParticipantsWaitingList().remove(user.getId()))
+      changed = true;
 
-    if (modified) {
+    if (changed) {
       repo.save(event);
 
       auditLogger.log(
@@ -507,47 +538,15 @@ public class EventController {
     return Map.of("message", "You have left the event");
   }
 
-  @GetMapping("/joined/statuses")
-  public List<JoinStatusOverview> getMyJoinedEventsStatus(Authentication auth) {
-    User user = getCurrentUser(auth);
-    List<Event> allEvents = repo.findAll();
-
-    List<JoinStatusOverview> result = new ArrayList<>();
-
-    for (Event e : allEvents) {
-      String status;
-
-      if (e.getParticipants().contains(user.getId())) {
-        status = Event.JoinStatus.APPROVED.name();
-      } else {
-        Event.JoinRequest jr = e.getJoinRequests().stream()
-            .filter(req -> req.getUserId().equals(user.getId()))
-            .findFirst()
-            .orElse(null);
-        if (jr == null)
-          continue;
-        status = jr.getJoinStatus().name();
-      }
-
-      JoinStatusOverview overview = new JoinStatusOverview();
-      overview.setEventId(e.getId());
-      overview.setEventTitle(e.getTitle());
-      overview.setJoinStatus(status);
-      overview.setRedirectToEventPage("/events/" + e.getId());
-
-      if (Event.JoinStatus.APPROVED.name().equals(status)) {
-        overview.setConversationLink("/chat/" + e.getId());
-      }
-      result.add(overview);
-    }
-
-    return result;
-  }
+  // ============================================================
+  // Join Requests (Host only)
+  // ============================================================
 
   @GetMapping("/{id}/join/requests")
   public List<Event.JoinRequest> listJoinRequests(@PathVariable String id, Authentication auth) {
     Event e = repo.findById(id)
         .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Event not found"));
+
     assertOwner(auth, e);
     return e.getJoinRequests();
   }
@@ -561,48 +560,44 @@ public class EventController {
 
     Event e = repo.findById(id)
         .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Event not found"));
+
     User currentUser = getCurrentUser(auth);
     assertOwner(auth, e);
 
-    String act = (action == null ? "" : action.trim().toLowerCase(Locale.ROOT));
-    Event.JoinStatus newStatus = switch (act) {
+    Event.JoinStatus newStatus = switch (action.toLowerCase(Locale.ROOT)) {
       case "approve" -> Event.JoinStatus.APPROVED;
       case "reject" -> Event.JoinStatus.REJECTED;
       case "pending" -> Event.JoinStatus.PENDING;
-      case "waiting", "waitlist", "waitlisted" -> Event.JoinStatus.WAITLISTED;
-      case "none", "remove", "clear" -> null;
-      default -> throw new ResponseStatusException(HttpStatus.BAD_REQUEST,
-          "action must be one of: approve, reject, pending, waitlist, none");
+      case "waitlist", "waiting" -> Event.JoinStatus.WAITLISTED;
+      case "none", "clear" -> null;
+      default -> throw new ResponseStatusException(HttpStatus.BAD_REQUEST, "Invalid join status action");
     };
 
+    // Reset old status
     e.getParticipants().remove(userId);
+    e.getJoinRequests().removeIf(j -> j.getUserId().equals(userId));
     e.getParticipantsWaitingList().remove(userId);
-    e.getJoinRequests().removeIf(jr -> Objects.equals(jr.getUserId(), userId));
 
+    // Apply new status
     if (newStatus == Event.JoinStatus.APPROVED) {
       e.getParticipants().add(userId);
       chatService.addParticipantIfExists(e.getId(), userId);
     } else if (newStatus == Event.JoinStatus.PENDING) {
-      Event.JoinRequest jr = new Event.JoinRequest(userId, Event.JoinStatus.PENDING, Instant.now());
-      e.getJoinRequests().add(jr);
+      e.getJoinRequests().add(new Event.JoinRequest(userId, Event.JoinStatus.PENDING, Instant.now()));
     } else if (newStatus == Event.JoinStatus.WAITLISTED) {
       e.getParticipantsWaitingList().add(userId);
     }
 
     repo.save(e);
 
-    AuditAction auditAction;
-    if (newStatus == Event.JoinStatus.APPROVED) {
-      auditAction = AuditAction.EVENT_JOIN_APPROVED;
-    } else if (newStatus == Event.JoinStatus.REJECTED) {
-      auditAction = AuditAction.EVENT_JOIN_REJECTED;
-    } else if (newStatus == Event.JoinStatus.WAITLISTED) {
-      auditAction = AuditAction.EVENT_JOIN_WAITLISTED;
-    } else if (newStatus == Event.JoinStatus.PENDING) {
-      auditAction = AuditAction.EVENT_JOIN_REQUESTED;
-    } else {
-      auditAction = AuditAction.EVENT_JOIN_CANCELLED;
-    }
+    // Select correct audit action
+    AuditAction auditAction = switch (newStatus) {
+      case APPROVED -> AuditAction.EVENT_JOIN_APPROVED;
+      case REJECTED -> AuditAction.EVENT_JOIN_REJECTED;
+      case WAITLISTED -> AuditAction.EVENT_JOIN_WAITLISTED;
+      case PENDING -> AuditAction.EVENT_JOIN_REQUESTED;
+      default -> AuditAction.EVENT_JOIN_CANCELLED;
+    };
 
     auditLogger.log(
         AuditCategory.EVENT_JOIN,
@@ -610,54 +605,37 @@ public class EventController {
         currentUser.getId(),
         userId,
         e.getId(),
-        Map.of("newStatus", newStatus != null ? newStatus.name() : "NONE"));
+        Map.of("newStatus", (newStatus != null ? newStatus.name() : "NONE")));
 
     return Map.of(
         "message", "updated",
-        "status", newStatus != null ? newStatus.name() : "NONE",
+        "status", (newStatus != null ? newStatus.name() : "NONE"),
         "participantsCount", e.getParticipants().size(),
         "spotsLeft", e.getSpotsLeft());
   }
+
+  // ============================================================
+  // Likes
+  // ============================================================
 
   @GetMapping("/{id}/likes")
   public Map<String, Object> getLikes(@PathVariable String id, Authentication auth) {
     Event e = repo.findById(id)
         .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Event not found"));
 
-    if (auth == null) {
-      throw new ResponseStatusException(HttpStatus.UNAUTHORIZED, "Authentication required");
-    }
-
     User currentUser = getCurrentUser(auth);
 
     if (!e.isHost(currentUser.getId())) {
-      logger.warn("Unauthorized attempt to view likes by user {} on event {}", currentUser.getId(), id);
-
       auditLogger.security(
           AuditAction.UNAUTHORIZED_ACCESS_ATTEMPT,
           currentUser.getId(),
-          Map.of(
-              "endpoint", "GET /api/events/" + id + "/likes",
-              "reason", "non_host_view_likes"));
-
-      throw new ResponseStatusException(HttpStatus.FORBIDDEN, "Only the event host can view likes");
+          Map.of("endpoint", "GET /api/events/" + id + "/likes"));
+      throw new ResponseStatusException(HttpStatus.FORBIDDEN, "Only hosts can view likes");
     }
 
     boolean likedByMe = e.getLikedByUserIds().contains(currentUser.getId());
-    return Map.of(
-        "count", e.getLikeCount(),
-        "likedByMe", likedByMe);
-  }
 
-  @GetMapping("/liked")
-  public List<Event> getLikedEventsForUser(Authentication auth) {
-    User user = getCurrentUser(auth);
-
-    List<Event> allEvents = repo.findAll();
-    return allEvents.stream()
-        .filter(e -> !e.isCanceled())
-        .filter(e -> e.getLikedByUserIds().contains(user.getId()))
-        .collect(Collectors.toList());
+    return Map.of("count", e.getLikeCount(), "likedByMe", likedByMe);
   }
 
   @PostMapping("/{id}/likes")
@@ -679,14 +657,13 @@ public class EventController {
 
     repo.save(event);
 
-    Map<String, Object> response = new LinkedHashMap<>();
-    response.put("message", "liked");
-    response.put("likedByMe", true);
-    if (event.isHost(user.getId())) {
-      response.put("count", event.getLikeCount());
-    }
+    Map<String, Object> result = new HashMap<>();
+    result.put("message", "liked");
+    result.put("likedByMe", true);
 
-    return response;
+    if (event.isHost(user.getId()))
+      result.put("count", event.getLikeCount());
+    return result;
   }
 
   @DeleteMapping("/{id}/likes")
@@ -708,43 +685,44 @@ public class EventController {
 
     repo.save(event);
 
-    Map<String, Object> response = new LinkedHashMap<>();
-    response.put("message", "unliked");
-    response.put("likedByMe", false);
-    if (event.isHost(user.getId())) {
-      response.put("count", event.getLikeCount());
-    }
+    Map<String, Object> result = new HashMap<>();
+    result.put("message", "unliked");
+    result.put("likedByMe", false);
 
-    return response;
+    if (event.isHost(user.getId()))
+      result.put("count", event.getLikeCount());
+    return result;
   }
 
+  // ============================================================
+  // Co-host Management
+  // ============================================================
+
   @PostMapping("/{id}/cohosts/{userId}")
-  public Map<String, String> updateCoHost(@PathVariable String id,
+  public Map<String, String> updateCoHost(
+      @PathVariable String id,
       @PathVariable String userId,
       @RequestParam String action,
       Authentication auth) {
     Event e = repo.findById(id)
         .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Event not found"));
+
     User currentUser = getCurrentUser(auth);
 
     if (!e.isHost(currentUser.getId())) {
-      logger.warn("Unauthorized co-host modification by non-host: {}", currentUser.getId());
-
       auditLogger.security(
           AuditAction.UNAUTHORIZED_ACCESS_ATTEMPT,
           currentUser.getId(),
-          Map.of(
-              "endpoint", "POST /api/events/" + id + "/cohosts/" + userId,
-              "reason", "non_host_cohost_management"));
-
-      throw new ResponseStatusException(HttpStatus.FORBIDDEN, "Only the event host can manage co-hosts");
+          Map.of("endpoint", "POST /api/events/" + id + "/cohosts/" + userId));
+      throw new ResponseStatusException(HttpStatus.FORBIDDEN, "Only host can manage co-hosts");
     }
 
     if ("add".equalsIgnoreCase(action)) {
+
       if (!e.getParticipants().contains(userId)) {
-        throw new ResponseStatusException(HttpStatus.BAD_REQUEST,
-            "User must be an APPROVED participant to become co-host");
+        throw new ResponseStatusException(HttpStatus.BAD_REQUEST, "User must be approved participant");
       }
+
       boolean added = e.getCoHostUserIds().add(userId);
       repo.save(e);
 
@@ -758,11 +736,14 @@ public class EventController {
             Map.of());
       }
 
-      return Map.of("message", added ? "co-host added" : "already a co-host");
+      return Map.of("message", added ? "cohost added" : "already cohost");
+
     } else if ("remove".equalsIgnoreCase(action)) {
+
       if (e.isHost(userId)) {
-        throw new ResponseStatusException(HttpStatus.BAD_REQUEST, "Host cannot be removed");
+        throw new ResponseStatusException(HttpStatus.BAD_REQUEST, "Cannot remove host");
       }
+
       boolean removed = e.getCoHostUserIds().remove(userId);
       repo.save(e);
 
@@ -776,11 +757,15 @@ public class EventController {
             Map.of());
       }
 
-      return Map.of("message", removed ? "co-host removed" : "user was not a co-host");
+      return Map.of("message", removed ? "cohost removed" : "not cohost");
     }
 
-    throw new ResponseStatusException(HttpStatus.BAD_REQUEST, "Action must be 'add' or 'remove'");
+    throw new ResponseStatusException(HttpStatus.BAD_REQUEST, "Action must be add/remove");
   }
+
+  // ============================================================
+  // Participants
+  // ============================================================
 
   @GetMapping("/{id}/participants")
   public List<Map<String, Object>> getEventParticipants(
@@ -788,8 +773,8 @@ public class EventController {
       Authentication auth) {
     Event e = repo.findById(id)
         .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Event not found"));
-    User currentUser = getCurrentUser(auth);
 
+    User currentUser = getCurrentUser(auth);
     boolean isHost = e.isHost(currentUser.getId());
     boolean isCoHost = e.isCoHost(currentUser.getId());
     boolean isParticipant = e.getParticipants().contains(currentUser.getId());
@@ -798,12 +783,8 @@ public class EventController {
       auditLogger.security(
           AuditAction.UNAUTHORIZED_ACCESS_ATTEMPT,
           currentUser.getId(),
-          Map.of(
-              "endpoint", "GET /api/events/" + id + "/participants",
-              "reason", "not_host_or_participant"));
-
-      throw new ResponseStatusException(HttpStatus.FORBIDDEN,
-          "You must be a host or participant to view attendees.");
+          Map.of("endpoint", "GET /api/events/" + id + "/participants"));
+      throw new ResponseStatusException(HttpStatus.FORBIDDEN, "Must be participant or host");
     }
 
     return e.getParticipants().stream()
@@ -813,9 +794,7 @@ public class EventController {
         .map(u -> {
           Map<String, Object> map = new HashMap<>();
           map.put("id", u.getId());
-          String name = Optional.ofNullable(u.getDisplayName())
-              .orElse(Optional.ofNullable(u.getName()).orElse("Unnamed"));
-          map.put("name", name);
+          map.put("name", Optional.ofNullable(u.getDisplayName()).orElse(u.getName()));
           map.put("profileImage", u.getAvatarUrl());
           return map;
         })
@@ -827,7 +806,6 @@ public class EventController {
       @PathVariable String eventId,
       @PathVariable String userId,
       Authentication auth) {
-
     User currentUser = getCurrentUser(auth);
     Event event = repo.findById(eventId)
         .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Event not found"));
@@ -836,48 +814,34 @@ public class EventController {
     boolean isCoHost = event.isCoHost(currentUser.getId());
 
     if (!isHost && !isCoHost) {
-      logger.warn("Unauthorized removal attempt by {} on event {}", currentUser.getId(), event.getId());
-
       auditLogger.security(
           AuditAction.UNAUTHORIZED_ACCESS_ATTEMPT,
           currentUser.getId(),
-          Map.of(
-              "endpoint", "DELETE /api/events/" + eventId + "/participants/" + userId,
-              "reason", "not_host_or_cohost"));
-
-      throw new ResponseStatusException(HttpStatus.FORBIDDEN, "Only host or co-host can remove participants");
+          Map.of("endpoint", "DELETE /api/events/" + eventId + "/participants/" + userId));
+      throw new ResponseStatusException(HttpStatus.FORBIDDEN, "Only host/cohost can remove participants");
     }
 
-    if (isCoHost) {
-      if (event.isHost(userId)) {
-        throw new ResponseStatusException(HttpStatus.FORBIDDEN, "Co-host cannot remove host");
-      }
-      if (event.isCoHost(userId)) {
-        throw new ResponseStatusException(HttpStatus.FORBIDDEN, "Co-host cannot remove other co-hosts");
-      }
+    if (isCoHost && (event.isHost(userId) || event.isCoHost(userId))) {
+      throw new ResponseStatusException(HttpStatus.FORBIDDEN, "Co-host cannot remove host/co-host");
     }
 
     boolean changed = false;
 
-    if (event.getParticipants().remove(userId)) {
+    if (event.getParticipants().remove(userId))
       changed = true;
-    }
-    if (isHost && event.getCoHostUserIds().remove(userId)) {
+    if (isHost && event.getCoHostUserIds().remove(userId))
       changed = true;
-    }
-    if (event.getParticipantsWaitingList() != null &&
-        event.getParticipantsWaitingList().remove(userId)) {
-      changed = true;
-    }
 
-    List<Event.JoinRequest> updated = event.getJoinRequests()
-        .stream()
-        .filter(jr -> !userId.equals(jr.getUserId()))
+    List<Event.JoinRequest> updated = event.getJoinRequests().stream().filter(j -> !j.getUserId().equals(userId))
         .toList();
+
     if (updated.size() != event.getJoinRequests().size()) {
       event.setJoinRequests(updated);
       changed = true;
     }
+
+    if (event.getParticipantsWaitingList().remove(userId))
+      changed = true;
 
     if (changed) {
       repo.save(event);
@@ -894,61 +858,9 @@ public class EventController {
     return Map.of("message", "Participant removed");
   }
 
-  @GetMapping("/{id}/share")
-  public Map<String, String> getEventShareLink(@PathVariable String id, Authentication auth) {
-    if (auth == null || !auth.isAuthenticated()) {
-      throw new ResponseStatusException(HttpStatus.UNAUTHORIZED, "Authentication required to generate share link");
-    }
-
-    Event e = repo.findById(id)
-        .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Event not found"));
-
-    String frontendBaseUrl = "https://planbana.com/events/";
-    String shareUrl = frontendBaseUrl + e.getId();
-
-    return Map.of("shareUrl", shareUrl);
-  }
-
-  @GetMapping("/{id}/statistics")
-  public Map<String, Object> getEventStats(@PathVariable String id, Authentication auth) {
-    User currentUser = getCurrentUser(auth);
-    Event event = repo.findById(id)
-        .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Event not found"));
-
-    if (!event.isHost(currentUser.getId())) {
-      throw new ResponseStatusException(HttpStatus.FORBIDDEN, "Only the event host can access statistics.");
-    }
-
-    int participantsCount = event.getParticipants().size();
-    int waitingListCount = event.getParticipantsWaitingList().size();
-    long likesCount = event.getLikeCount();
-
-    int pendingJoinRequests = (int) event.getJoinRequests().stream()
-        .filter(req -> !event.getParticipants().contains(req.getUserId()))
-        .filter(req -> !event.getParticipantsWaitingList().contains(req.getUserId()))
-        .count();
-
-    return Map.of(
-        "participants", participantsCount,
-        "waitingList", waitingListCount,
-        "likes", likesCount,
-        "joinRequests", pendingJoinRequests);
-  }
-
-  @GetMapping("/{id}/audit-logs")
-  public List<AuditLog> getAuditLogs(@PathVariable String id, Authentication auth) {
-    User currentUser = getCurrentUser(auth);
-    Event event = repo.findById(id)
-        .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Event not found"));
-
-    if (!event.isHost(currentUser.getId())) {
-      throw new ResponseStatusException(HttpStatus.FORBIDDEN, "Only hosts can view audit logs.");
-    }
-
-    return auditLogRepo.findByEventIdOrderByTimestampDesc(event.getId());
-  }
-
-  // ===== Bookmarks =====
+  // ============================================================
+  // Bookmarks
+  // ============================================================
 
   @PostMapping("/{id}/bookmark")
   public Map<String, String> bookmarkEvent(@PathVariable String id, Authentication auth) {
@@ -968,19 +880,6 @@ public class EventController {
         Map.of());
 
     return Map.of("message", "Event bookmarked");
-  }
-
-  @GetMapping("/bookmarks")
-  public List<Event> getBookmarkedEvents(Authentication auth) {
-    User user = getCurrentUser(auth);
-
-    if (user.getBookmarkedEventIds().isEmpty()) {
-      return List.of();
-    }
-
-    return repo.findAllById(user.getBookmarkedEventIds()).stream()
-        .filter(e -> !e.isCanceled())
-        .collect(Collectors.toList());
   }
 
   @DeleteMapping("/{id}/bookmark")
@@ -1004,50 +903,60 @@ public class EventController {
     return Map.of("message", "Bookmark not found");
   }
 
-  // --- Helpers ---
+  // ============================================================
+  // Event Audit Logs (host only)
+  // ============================================================
+
+  @GetMapping("/{id}/audit-logs")
+  public List<AuditLog> getAuditLogs(@PathVariable String id, Authentication auth) {
+    User currentUser = getCurrentUser(auth);
+    Event event = repo.findById(id)
+        .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Event not found"));
+
+    if (!event.isHost(currentUser.getId())) {
+      throw new ResponseStatusException(HttpStatus.FORBIDDEN, "Only host may view audit logs");
+    }
+
+    return auditLogRepo.findByEventIdOrderByTimestampDesc(event.getId());
+  }
+
+  // ============================================================
+  // Helpers
+  // ============================================================
 
   private User getCurrentUser(Authentication auth) {
     if (auth == null || auth.getName() == null) {
       throw new ResponseStatusException(HttpStatus.UNAUTHORIZED, "Authentication required");
     }
+
     return users.findByPhone(auth.getName())
         .orElseThrow(() -> new ResponseStatusException(HttpStatus.UNAUTHORIZED, "User not found"));
   }
 
   private void assertOwner(Authentication auth, Event e) {
     User u = getCurrentUser(auth);
-    if (!Objects.equals(e.getCreatedByUserId(), u.getId()) &&
-        (e.getCoHostUserIds() == null || !e.getCoHostUserIds().contains(u.getId()))) {
-      logger.warn("Unauthorized access attempt by {} on event {}", u.getId(), e.getId());
+    boolean isOwner = Objects.equals(e.getCreatedByUserId(), u.getId());
+    boolean isCoHost = e.getCoHostUserIds().contains(u.getId());
 
+    if (!isOwner && !isCoHost) {
       auditLogger.security(
           AuditAction.UNAUTHORIZED_ACCESS_ATTEMPT,
           u.getId(),
-          Map.of(
-              "endpoint", "EVENT_OWNER_CHECK",
-              "eventId", e.getId()));
-
+          Map.of("endpoint", "EVENT_OWNER_CHECK", "eventId", e.getId()));
       throw new ResponseStatusException(HttpStatus.FORBIDDEN, "Not authorized");
     }
   }
 
-  private static void ensureParticipant(Event e, String userId) {
-    e.setJoinRequests(e.getJoinRequests().stream()
-        .filter(j -> !Objects.equals(j.getUserId(), userId))
-        .collect(Collectors.toList()));
+  private static Event.JoinRequest findJoinRequest(Event e, String userId) {
+    return e.getJoinRequests().stream()
+        .filter(j -> j.getUserId().equals(userId))
+        .findFirst()
+        .orElse(null);
+  }
+
+  private static void ensureApproved(Event e, String userId) {
+    e.setJoinRequests(
+        e.getJoinRequests().stream().filter(j -> !j.getUserId().equals(userId)).toList());
     e.getParticipants().add(userId);
-  }
-
-  private static Event.JoinRequest findJoinRequestForUser(Event e, String userId) {
-    for (Event.JoinRequest jr : e.getJoinRequests()) {
-      if (Objects.equals(jr.getUserId(), userId))
-        return jr;
-    }
-    return null;
-  }
-
-  private static long extractLeadingNumber(String s) {
-    var m = java.util.regex.Pattern.compile("(\\d+)").matcher(s);
-    return m.find() ? Long.parseLong(m.group(1)) : 0L;
   }
 }
